--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <table class="tabla1">
         <tr>
             <td>
-    <img src="modelo.png">
+    <img src="img/modelo.png">
             </td>
             <td>
     <section class="form-contact">
@@ -181,7 +181,7 @@
 
 <div class="wsp-icon">
     <a href="https://api.whatsapp.com/send?phone=51936823652&text=Hola%2C%20quiero%20informacion%20sobre%20JC%20Language%20Center!🤗" target="_blank">
-    <img src="image.png"></a>
+    <img src="img/image.png"></a>
 </div>
 
 <div class="resena">
